--- a/prog 4/prog4.html
+++ b/prog 4/prog4.html
@@ -1,1 +1,65 @@
+ <html>
+ <head>
+ <title>Program 4</title>
+ <style>
+div
+{
+    background-image:url("images.jpeg");
+    width: 100%;
+	height:25%;
+    padding: 20px;
+    border: 3px solid black;
+	border-style:dashed;
+}
+</style>
+</head> 
+<style>
+body{
+	background-image:url("images (4).jpeg");
+	background-size:cover;
+ }
+ </style>
+ <main style="max-width: 300px; margin: auto;">
+ <center>
+<input type="text" id="str" placeholder="Enter String/Number">
+<input type="submit" onclick="eval();" value="submit" name="sub">
+<h2 ><font color="blue">RESULT</font></h2>
+</center>
+ <div id="result"></div>
+ <script>
+ function eval() {
+	var str = document.getElementById("str").value;
+	if (Number.isInteger(parseInt(str))) {
+		var num = parseInt(str);
+		var rev = 0, rem = 0;
+		while (num > 0) {
+				rem = parseInt(num % 10);
+				rev = rev * 10 + rem;
+				num = parseInt(num / 10);
+		}
+	result.innerHTML = "<p>Reverse of <strong> " + str + " is " + rev +"</strong></p>";
+	}
+	else {
+		var text = "<p>The Entered string is: <strong>" + str + "</strong></p>";
+		for (var i = 0; i < str.length; i++)
+		{
+			if (str.charAt(i) == 'a' || str.charAt(i) == 'e' || str.charAt(i) == 'i' || 
+			str.charAt(i) == 'o' || str.charAt(i) == 'u' || str.charAt(i) == 'A' || 
+			str.charAt(i) == 'E' || str.charAt(i) == 'I' || str.charAt(i) == 'O' || str.charAt(i) == 'U')
+			{
+				text += "<p>The Leftmost Vowel  <strong>" + str.charAt(i) + "</strong> is at pos <strong>"+ (i+1) + "</strong></p>";
+				result.innerHTML = text;
+				exit;
+			}
+		}
+		text += "<p> The Entered String Has No Vowels</p>";
+		result.innerHTML = text;
+	}
+ }
+ </script>
+ </center>
+ </main>
+ </body>
+</html>
+
 
